<resources>
    <string name="app_name">E-Sheet</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_basic_logo">App Basic Logo</string>
    <string name="abc">abc…</string>
    <string name="create_project">Create Project</string>
    <string name="update_project">Update Project</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_sheet">Create Sheet</string>
    <string name="update_sheet">Update Sheet</string>
    <string name="description">Description</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="quantity">Quantity</string>
    <string name="create_calculation">Create Calculation</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="qty">Qty</string>
    <string name="total">Total</string>
    <string name="type">Type</string>
    <string name="update_calculation">Update Calculation</string>
    <string name="serial_no">S#</string>
    <string name="project_name">Project Name</string>
    <string name="sheet_name">Sheet Name</string>

    <string-array name="calculation_type">
        <item>Add</item>
        <item>Sub</item>
    </string-array>
</resources>
